# sdwan_diagnostic_platform

./: .clineignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_errors.py
configs/: dev.yaml  prod.yaml
spec/00_core/: data_contract.md  error_model.md  state_context.md
spec/10_architecture/: layering_model.md
spec/20_domain/probe/: probe_dns.md  probe_icmp.md  probe_tcp.md
spec/20_domain/reporting/: report_schema.md
spec/50_execution/: pipeline_engine.md
src/sdwan_desktop/: __init__.py
src/sdwan_desktop/core/: __init__.py
src/sdwan_desktop/core/constants/: __init__.py  error_codes.py  severity.py
src/sdwan_desktop/core/errors/: __init__.py  base.py  flow.py  system.py  timeout.py  tool.py  validation.py
src/sdwan_desktop/core/types/: base.py  context.py  diagnosis.py  probe.py  system.py  tool.py
src/sdwan_desktop/tools/implementations/network/: dns.py  mtr.py  ping.py  tcping.py  traceroute.py
src/sdwan_desktop/tools/implementations/remote/: ssh.py  telnet.py
src/sdwan_desktop/tools/implementations/system/: windows.py
src/sdwan_desktop/tools/implementations/web/: har_capture.py
src/sdwan_desktop/tools/registry/: __init__.py  base.py  decorator.py  dispatcher.py
tests/: __init__.py
tests/unit/tools/: test_dns.py  test_mtr.py  test_ping.py  test_ssh.py  test_tcping.py  test_traceroute.py  test_windows_system.py
